# algolib

c/: Makefile.am  autogen.sh  cleanall.sh  configure.ac
c/quicksort/: Makefile.am  main.c  quicksort.c  quicksort.h
c/quicksort/.deps/: main.Po  quicksort.Po
c/src/: Makefile.am  bubblesort.c  bubblesort.h  main.c
